@@ -172,7 +172,7 @@ public class ToolBelt {
 		} catch (NoSuchMethodException e) {
 			// now try a no-arg constructor
 			logger.debug("No Fits 1-arg constructor for tool class: {} -- trying no-arg constructor. Error message: {}", toolClass.getName(), e.getMessage());
-			instanceOfTheClass = toolClass.newInstance();
+			instanceOfTheClass = toolClass.getDeclaredConstructor().newInstance();
 			logger.debug("Instantiated no-arg constructor for tool class: {}", toolClass.getName());
 		}
 		return (Tool)instanceOfTheClass;
